@@ -42,7 +42,6 @@ extern int option_pedantic;
 extern int option_fussy;
 extern int option_throwback;
 extern int option_local;
-extern int option_apcs_softfloat;
 extern int option_aof;
 extern bool option_abs;
 extern bool option_uppercase;
